--- a/package.json
+++ b/package.json
@@ -51,9 +51,18 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "bootstrap": "^4.1.1",
     "dotenv": "^2.0.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.7",
+    "react-router": "^3.0.2",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.7",
+    "reactstrap": "^6.0.1",
+    "redux": "^4.0.0",
+    "redux-form": "^7.3.0",
+    "redux-saga": "^0.16.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
