Can add resource

--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "react-router-redux": "^4.0.7",
     "reactstrap": "^6.0.1",
     "redux": "^4.0.0",
+    "redux-action-creator": "^2.3.0",
     "redux-form": "^7.3.0",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0"
   },
   "scripts": {
