--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-router": "^3.0.2",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.7",
+    "react-web3": "^0.4.5",
     "reactstrap": "^6.0.1",
     "redux": "^4.0.0",
     "redux-action-creator": "^2.3.0",
